--- a/src/Web/Components/Pages/Home.razor
+++ b/src/Web/Components/Pages/Home.razor
@@ -1,7 +1,32 @@
 ﻿@page "/"
+@inject IZaptecService _zaptec;
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<table class="table">
+    <thead class="thead-dark">
+        <tr>
+            <th>Period</th>
+            <th>Energy</th>
+            <th>Cost</th>
+        </tr>
+    </thead>
+    @foreach (ChargeCostSummaryViewModel summary in _summaries)
+    {
+        <tr>
+            <td>@summary.Period</td>
+            <td align="right">@summary.Energy kWh</td>
+            <td align="right">@summary.Cost kr.</td>
+        </tr>
+    }
+</table>
 
-Welcome to your new app.
+@code {
+    private IReadOnlyCollection<ChargeCostSummaryViewModel> _summaries = [];
+
+    protected override async Task OnInitializedAsync()
+    {
+        IReadOnlyCollection<ChargeCostSummary> summaries = await _zaptec.GetChargeHistoryCostSumamryAsync("quarter");
+        _summaries = summaries.Select(x => new ChargeCostSummaryViewModel(x)).ToList();
+    }
+}
